--- a/2.tex
+++ b/2.tex
@@ -1,6 +1,6 @@
 
 
-\begin{table
+\begin{table}
 \begin{tabular}{lccccc}
 \hline
 \textbf{Phase}        & \textbf{Time} & \textbf{M$_1$}  & \textbf{M$_2$} &  \textbf{$\Delta M$} & \textbf{P} \\   
