--- a/untitled.tex
+++ b/untitled.tex
@@ -2,3 +2,5 @@ Hello this is a start. This is \textit{italic} text and \textbf{bold}. We begin 
 \begin{equation}
 \eta = \frac{\pi^{1/2}m_e^{1/2}Ze^2 c^2}{\gamma_E 8 (2k_BT)^{3/2}}\ln\Lambda \approx 7\times10^{11}\ln\Lambda \;T^{-3/2} \,{\rm cm^2}\,{\rm s}^{-1}
 \end{equation}
+
+Here's a paper by Alyssa \cite{Goodman_2009}
