--- a/untitled.tex
+++ b/untitled.tex
@@ -4,3 +4,5 @@ Hello this is a start. This is \textit{italic} text and \textbf{bold}. We begin 
 \end{equation}
 
 Here's a paper by Alyssa \cite{Goodman_2009}
+
+\cite{http://adsabs.harvard.edu/abs/2013PASP..125..306F}
