added missing citations

--- a/untitled.tex
+++ b/untitled.tex
@@ -5,4 +5,4 @@ Hello this is a start. This is \textit{italic} text and \textbf{bold}. We begin 
 
 Here's a paper by Alyssa \cite{Goodman_2009}
 
-\cite{http://adsabs.harvard.edu/abs/2013PASP..125..306F}
+\cite{2013PASP..125..306F}
