--- a/untitled.tex
+++ b/untitled.tex
@@ -6,3 +6,5 @@ Hello this is a start. This is \textit{italic} text and \textbf{bold}. We begin 
 Here's a paper by Alyssa \cite{Goodman_2009}
 
 \cite{2013PASP..125..306F}
+
+\cite{http://adsabs.harvard.edu/abs/1995ApJ...448..748G}
