added missing citations

--- a/untitled.tex
+++ b/untitled.tex
@@ -7,4 +7,4 @@ Here's a paper by Alyssa \cite{Goodman_2009}
 
 \cite{2013PASP..125..306F}
 
-\cite{http://adsabs.harvard.edu/abs/1995ApJ...448..748G}
+\cite{1995ApJ...448..748G}
