added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -29,3 +29,18 @@
   adsurl = {http://adsabs.harvard.edu/abs/2013PASP..125..306F},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 }
+
+
+@ARTICLE{1995ApJ...448..748G,
+  author = {{Goodman}, A.~A. and {Jones}, T.~J. and {Lada}, E.~A. and {Myers}, P.~C.},
+  title = {{Does Near-Infrared Polarimetry Reveal the Magnetic Field in Cold Dark Clouds?}},
+  journal = {\apj},
+  keywords = {INFRARED: ISM: CONTINUUM, ISM: CLOUDS, ISM: DUST, EXTINCTION, ISM: INDIVIDUAL ALPHANUMERIC: L1755, ISM: MAGNETIC FIELDS, POLARIZATION},
+  year = {1995},
+  month = {aug},
+  volume = {448},
+  pages = {748},
+  doi = {10.1086/176003},
+  adsurl = {http://adsabs.harvard.edu/abs/1995ApJ...448..748G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
